<?xml version="1.0"?>
<resources>
    <string name="app_name">Stadium Reserver</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="change_password_hint">New Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Do not have an account? Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="title_activity_fake_login">FakeLoginActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hi">Hi, </string>
    <string name="change_pass">In order to ensure more security, please change the password</string>
    <string name="proceed">Proceed</string>
    <string name="edit">Edit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add user</string>
    <string name="add_stadium">Add Stadium</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="stadium_key">Stadium key</string>
    <string name="stadium_name">Stadium Name</string>
    <string name="stadium_location">Stadium Location</string>
    <string name="soccer_balls">soccer balls</string>
    <string name="basket_balls">basket balls</string>
    <string name="tennis_balls">tennis balls</string>
    <string name="nets">nets</string>
    <string name="rackets">rackets</string>
    <string name="back">back</string>
    <string name="setup_inventory">Setup Inventory</string>
    <string name="click_on_map">Click on the area where the stadium exists</string>
    <string name="no_data">No data to display</string>
    <string name="stadium_owners">Stadium owners</string>
    <string name="phone">Phone</string>
    <string name="stadium">Stadium</string>
    <string name="user_view_error">Failed to get fetch user data</string>
    <string name="stadiums">Stadiums</string>
    <string name="stadium_filter">Filter</string>
    <string name="sport">Sport</string>
    <string name="all">all</string>
    <string name="owner">Owner</string>
    <string name="no_user_linked">The stadium does not belong to a user yet</string>
    <string name="link">Link</string>
    <string name="choose_owner">Choose a user</string>
    <string name="Schedule">Schedule for today</string>
    <string name="capacity">Capacity</string>
    <string name="fieldName">Filed Name</string>
    <string name="fields">Fields</string>
    <string name="no_fields">No fileds available</string>
    <string name="noStadium">You do not have a stadium yet</string>
    <string name="active">Active</string>
    <string name="available">Available</string>
    <string name="my_reservations">My Reservations</string>
    <string name="no_reservations">You do not have any reservations yet</string>
    <string name="select_stadium">Select Stadium</string>
    <string name="select_game">Select game</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="date">date</string>
    <string name="pick">pick</string>
    <string name="price">Price/hour</string>
    <string name="home">Home</string>
    <string name="time">time</string>
    <string name="fromto">from @ to #</string>
    <string name="no_reservations_today">You do not have any reservations for today</string>
    <string name="language">English</string>
    <string name="reservations">reservations</string>
    <string name="profile">profile</string>
    <string name="accepted">accepted</string>
    <string name="rejected">rejected</string>
    <string name="pending">pending</string>
    <string name="removed_res">Successfully removed reservation</string>
    <string name="unexpectedError">Unexpected error, please try again</string>
    <string name="maxHours">Sorry, you have reached daily max reservation time</string>
    <string name="fieldRegistered">Sorry, this field is already registered at the time you selected</string>
    <string name="maxHours2">Sorry, you can not reserve more than 2 hours a day</string>
    <string name="res_complete">Successfully completed reservation</string>
    <string name="time_select">time select</string>
    <string name="dateTimeChoose">Choose Date and Time</string>
    <string name="mustChooseTime">You have to set time</string>
    <string name="mustChooseDate">You have to set date</string>
    <string name="egp">EGP</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="stadium_notActive">This stadium is not active</string>
    <string name="football">football</string>
    <string name="basket">basketball</string>
    <string name="tennis">tennis</string>
    <string name="swimming">swimming</string>
    <string name="fieldNotAvailable">This field is not available at the moment</string>
    <string name="removed_field">Successfully removed field</string>
    <string name="cannotDeleteField">Can not delete a field that is reserved</string>
    <string name="remove">Do you want to permanently delete this field</string>
    <string name="warning">warning</string>
    <string name="statusChanged">Successfully changed status</string>
    <string name="successfullyEdited">Successfully updated data</string>
    <string name="search">Search Here</string>
    <string name="owner_name">Owner name</string>
    <string name="successfulyAddedStadium">Successfully added stadium</string>
    <string name="successfullyLinked">Successfully linked</string>
    <string name="successfulyAddedUser">Successfully added owner</string>
    <string name="change_pass_header">Hi,</string>
    <string name="email_not_valid">Please enter a valid email!</string>
    <string name="password_wrong">Wrong Password!</string>
    <string name="email_not_found">Email not found!</string>
    <string name="fill_email">You have to fill the email!</string>
    <string name="enter_password">You have to enter password!</string>
    <string name="empty_phone">Phone can not be empty!</string>
    <string name="empty_fname">Enter your first name!</string>
    <string name="lname_empty">Enter your last name!</string>
    <string name="empty_uname">Enter a username!</string>
    <string name="invalid_phone">Invalid phone number!</string>
    <string name="email_exists">email already exists!</string>
    <string name="phone_exists">phone already exists!</string>
    <string name="network_error">Netwok error!</string>
    <string name="invalid_user">Invalid user</string>
    <string name="enter_key">Enter Stadium Key</string>
    <string name="enter_stad_name">Enter Stadium Name</string>
    <string name="enter_stad_loc">Enter Stadium Location</string>
    <string name="key_used">Stadium Key is already used, try another one</string>
    <string name="no_data_msg">No data to display</string>
    <string name="key_not_exist">Key does not exist</string>
    <string name="game_exists">Game already exists in this stadium</string>
    <string name="key_contains">Stadium key cannot contain * - / + . ! # \$</string>
    <string name="linked">Linked</string>
    <string name="unlinked">Unlinked</string>
    <string name="users">users</string>

    <string-array name="stadium_filters">
        <item>All</item>
        <item>Unlinked</item>
        <item>Linked</item>
    </string-array>
    <string-array name="sports">
        <item>football</item>
        <item>basket</item>
        <item>tennis</item>
        <item>swimming</item>
    </string-array>

    <string-array name="reservation_filters1">
        <item>all</item>
        <item>accepted</item>
        <item>rejected</item>
        <item>pending</item>
    </string-array>

    <string-array name="reservation_filters2">
        <item>pending</item>
        <item>all</item>
        <item>accepted</item>
        <item>rejected</item>
    </string-array>
</resources>