<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.StadiumRegisterationFragment">

    <TextView
        android:id="@+id/stadium_first"
        style="@style/headerTextPrimary"
        android:text="@string/add_stadium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/stadium_add_txt_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="error"
        android:textColor="@color/redError"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stadium_first" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/stadium_textInputLayout"

            android:layout_width="355dp"
            android:layout_height="58dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stadium_add_txt_error_msg">

            <EditText
                android:id="@+id/Stadium_add_key"
                style="@style/modifiedEditText"

                android:hint="@string/stadium_key"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stadium_textInputLayout2"
        android:layout_width="355dp"
        android:layout_height="58dp"
            android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stadium_textInputLayout">

        <EditText
            android:id="@+id/Stadium_add_name"
            style="@style/modifiedEditText"

            android:hint="@string/stadium_name"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="355dp"
            android:layout_height="58dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stadium_textInputLayout2">

            <EditText
                android:id="@+id/Stadium_add_location"
                style="@style/modifiedEditText"
                android:hint="@string/stadium_location"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/stadium_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="4dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/stadium_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="4dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="47dp"
            android:layout_height="41dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_baseline_add_location"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout6" />



</androidx.constraintlayout.widget.ConstraintLayout>